--- a/shell/platform/android/BUILD.gn
+++ b/shell/platform/android/BUILD.gn
@@ -407,6 +407,13 @@ action("robolectric_tests") {
     "test/io/flutter/embedding/android/FlutterActivityTest.java",
     "test/io/flutter/embedding/android/FlutterFragmentTest.java",
     "test/io/flutter/embedding/engine/FlutterEngineCacheTest.java",
+    "test/io/flutter/embedding/engine/FlutterJNITest.java",
+    "test/io/flutter/embedding/engine/RenderingComponentTest.java",
+    "test/io/flutter/embedding/engine/renderer/FlutterRendererTest.java",
+    "test/io/flutter/embedding/engine/systemchannels/PlatformChannelTest.java",
+    "test/io/flutter/plugin/common/StandardMessageCodecTest.java",
+    "test/io/flutter/plugin/editing/TextInputPluginTest.java",
+    "test/io/flutter/plugin/platform/SingleViewPresentationTest.java",
     "test/io/flutter/util/PreconditionsTest.java",
   ]
 
@@ -424,6 +431,7 @@ action("robolectric_tests") {
     "//third_party/robolectric/lib/robolectric-3.8.jar",
     "//third_party/robolectric/lib/shadows-framework-3.8.jar",
     "//third_party/robolectric/lib/annotations-3.8.jar",
+    "//third_party/robolectric/lib/shadowapi-3.8.jar",
     "//third_party/robolectric/lib/runtime-1.1.1.jar",
     "//third_party/robolectric/lib/common-1.1.1.jar",
     "//third_party/robolectric/lib/common-java8-1.1.1.jar",
